Adicionado o sistema de ligas, onde os jogadores podem competir para subir de liga e ganhar recompensas exclusivas. O sistema inclui uma nova classe LeagueManager para gerenciar as ligas, bem como atualizações em vários eventos para integrar as ligas. Além disso, foram feitas melhorias gerais no código para otimizar o desempenho e corrigir bugs menores.